# dearapi

./: CMakeLists.txt  vcpkg.json
include/: app_gate.hpp  collection_tab.hpp  curl_parser.hpp  db_store.hpp  http_client.hpp  importer.hpp  macos_titlebar.hpp  main_frame.hpp  request_tab.hpp
scripts/: build  run-tests
src/: collection_tab.cpp  curl_parser.cpp  db_store.cpp  http_client.cpp  importer.cpp  macos_titlebar.mm  main.cpp  main_frame.cpp  request_tab.cpp
tests/: curl_parser_test.cpp
